add: clear button function popup.js

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -14,7 +14,7 @@
             <button class="platform-btn" id="sendClaude">Claude</button>
             <button class="platform-btn" id="sendDeepseek">Deepseek</button>
             <button class="platform-btn" id="sendGemini">Gemini</button>
-            <button class="clear" id="clearPrompt">Clear</button>
+            <button class="clear" id="clearPrompt" onClick="clearTextBox">Clear</button>
         </div>
         <div id="status"></div>
     </div>
